src/objects/Caliber_Assessment__c.object
<CustomObject>
    <fields>
        <fullName>Assessment_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assessment Category</label>
        <referenceTo>Caliber_Category__c</referenceTo>
        <relationshipLabel>Caliber Assessments</relationshipLabel>
        <relationshipName>Caliber_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assessment_Title__c</fullName>
        <formula>Assessment_Category__r.Name &amp; &quot;: &quot; &amp;  TEXT(Assessment_Type__c)</formula>
        <label>Assessment Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Type__c</fullName>
        <label>Assessment Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Exam</fullName>
                </value>
                <value>
                    <fullName>Verbal</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Presentation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Points__c</fullName>
        <description>An arbitrary number designating the maximum number of points a trainee can earn for an assessment. The weighted score (out of 100%) is determined by Caliber_Grade__c.Score__c / Max_Points__c</description>
        <label>Max Points</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Id__c</fullName>
        <label>Training Id</label>
        <referenceTo>Training__c</referenceTo>
        <relationshipLabel>Caliber Assessments</relationshipLabel>
        <relationshipName>Caliber_Assessments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Week_Number__c</fullName>
        <description>The week that the test was administered, for example a Java Verbal test on Week 1.</description>
        <label>Week Number</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Caliber Assessment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ASMNT-{0000000}</displayFormat>
        <label>Caliber Assessment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Caliber Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>